# stack-machine

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  util.rs
src/ops/: binary.rs  mod.rs  nullary.rs  stack.rs  ternary.rs  unary.rs
src/stack/: mod.rs  value.rs
src/util/: mod.rs  one_or_more.rs  str_ext.rs
static/: index.html
tests/: main.rs
tests/docenteslab2021/: examples.rs  guiao1.rs  guiao2.rs  guiao3.rs  guiao4.rs  guiao5.rs  mod.rs
tests/util/: mod.rs
