[package]
name = "stack_machine"
version = "0.1.0"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2018"
default-run = "repl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.5"
serde = "1"
chrono = "0.4"
itertools = "0.10"
csv = "1"
either = "1"
