[package]
name = "stack_machine"
version = "0.1.0"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2021"
default-run = "repl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
chrono = "0.4.19"
itertools = "0.10.3"
csv = "1.1.6"
either = "1.6.1"
tokio = { version = "1.17.0", features = ["sync", "rt"] }
